--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
       "detail": "https://heimuer.tv"
     },
     "ruyi": {
-      "api": "http://cj.rycjapi.com/api.php/provide/vod",
+      "api": "https://cj.rycjapi.com/api.php/provide/vod",
       "name": "如意资源"
     },
     "bfzy": {
@@ -81,9 +81,73 @@
       "api": "https://cj.lziapi.com/api.php/provide/vod",
       "name": "量子资源站"
     },
-    "xiaomaomi": {
-      "api": "https://zy.xmm.hk/api.php/provide/vod",
-      "name": "小猫咪资源"
+    "okzy": {
+      "api": "https://okzyw9.com/api.php/provide/vod/",
+      "name": "OK资源"
+    },
+    "jinying": {
+      "api": "https://jinyingzy.com/api.php/provide/vod/",
+      "name": "金鹰资源"
+    },
+    "fuju": {
+      "api": "http://www.fuju2024.cc:8013/ruifenglb_api.php/provide/vod/",
+      "name": "腐剧资源"
+    },
+    "hwba": {
+      "api": "https://hw8.live/api.php/provide/vod/",
+      "name": "华为吧资源"
+    },
+    "xiaohuangren": {
+      "api": "https://iqyi.xiaohuangrentv.com/api.php/provide/vod/",
+      "name": "小黄人资源"
+    },
+    "yayazy": {
+      "api": "https://cj.yayazy.net/api.php/provide/vod/",
+      "name": "丫丫资源"
+    },
+    "vodimg": {
+      "api": "https://cj.vodimg.top/api.php/provide/vod/",
+      "name": "影图资源"
+    },
+    "uku": {
+      "api": "https://api.ukuapi.com/api.php/provide/vod/",
+      "name": "U酷资源"
+    },
+    "suoni": {
+      "api": "https://suoniapi.com/api.php/provide/vod/",
+      "name": "索尼资源"
+    },
+    "hongniu": {
+      "api": "https://www.hongniuzy2.com/api.php/provide/vod/",
+      "name": "红牛资源"
+    },
+    "kczy": {
+      "api": "https://caiji.kczyapi.com/api.php/provide/vod/from/kcm3u8/",
+      "name": "快车资源"
+    },
+    "sdzy": {
+      "api": "http://sdzyapi.com/api.php/provide/vod/",
+      "name": "闪电资源"
+    },
+    "huya": {
+      "api": "https://www.huyaapi.com/api.php/provide/vod/",
+      "name": "虎牙资源"
+    },
+    "p2100": {
+      "api": "https://p2100.net/api.php/provide/vod/",
+      "name": "飘零资源"
+    },
+    "subo": {
+      "api": "https://subocaiji.com/api.php/provide/vod/",
+      "name": "速博资源"
+    },
+    "modu": {
+      "api": "https://caiji.moduapi.cc/api.php/provide/vod/",
+      "name": "魔都采集"
+    },
+    "xinlang": {
+      "api": "https://api.xinlangapi.com/xinlangapi.php/provide/vod/",
+      "name": "新浪资源"
     }
   }
 }
