--- a/config.json
+++ b/config.json
@@ -46,7 +46,7 @@
       "detail": "https://jszyapi.com"
     },
     "dbzy": {
-      "api": "https://dbzy.tv/api.php/provide/vod",
+      "api": "https://dbzy.tv/api.php/provide/vod/",
       "name": "豆瓣资源"
     },
     "mozhua": {
